@@ -287,7 +287,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             bg.unload();
 
             if (effect != null)
@@ -621,7 +621,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> file, () -> {
+        }, _ -> file, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -1355,7 +1355,7 @@ public class ImageDrawing {
 
             if(anim != null) {
                 switch (i) {
-                    case 0, 1 -> totalFrame += Math.max(60, Math.min(150, anim.len()));
+                    case 0, 1 -> totalFrame += Math.clamp(anim.len(), 60, 150);
                     case 2 -> totalFrame += Math.max(60, anim.len());
                     case 3, 5 -> totalFrame += 60;
                     case 4, 6 -> totalFrame += anim.len();
@@ -1382,7 +1382,7 @@ public class ImageDrawing {
 
                 if(anim != null) {
                     int frame = switch (i) {
-                        case 0, 1 -> Math.max(60, Math.min(150, anim.len()));
+                        case 0, 1 -> Math.clamp(anim.len(), 60, 150);
                         case 2 -> Math.max(60, anim.len());
                         case 3, 5 -> 60;
                         case 4, 6 -> anim.len();
@@ -1817,7 +1817,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -1988,7 +1988,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -2292,7 +2292,7 @@ public class ImageDrawing {
             });
             
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
             
             return Unit.INSTANCE;
@@ -2591,7 +2591,7 @@ public class ImageDrawing {
             });
             
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
             
             return Unit.INSTANCE;
@@ -2705,7 +2705,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -2791,7 +2791,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, i -> image, () -> {
+        }, _ -> image, () -> {
             countDown.countDown();
 
             return Unit.INSTANCE;
@@ -3011,7 +3011,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -3229,7 +3229,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -3554,7 +3554,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -4012,7 +4012,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
@@ -4230,7 +4230,7 @@ public class ImageDrawing {
             });
 
             return Unit.INSTANCE;
-        }, progress -> image, () -> {
+        }, _ -> image, () -> {
             waiter.countDown();
 
             return Unit.INSTANCE;
